# exam

exam1_task1/ros2_ws/src/exam_robot/: README.md  package.xml
exam1_task3/ros2_ws/src/exam_robot/: setup.py
exam1_task3/ros2_ws/src/exam_robot/exam_robot/: status_display.py
exam1_task4/ros2_ws/src/exam_robot/: package.xml
exam1_task5/ros2_ws/src/exam_robot/exam_robot/: robot_controller.py
exam1_task5/ros2_ws/src/exam_robot/launch/: robot_system.launch.py
exam1_task5/ros2_ws/src/exam_robot/urdf/: exam_robot.urdf
exam1_task6/ros2_ws/src/exam_robot/exam_robot/: battery_node.py  distance_sensor.py
exam1_task7/: frames_2026-03-14_10.56.52.gv
exam1_task7/ros2_ws/src/exam_robot/: README.md  package.xml  setup.cfg  setup.py
exam1_task7/ros2_ws/src/exam_robot/exam_robot/: battery_node.py  distance_sensor.py  robot_controller.py  status_display.py
exam1_task7/ros2_ws/src/exam_robot/launch/: robot_system.launch.py
exam1_task7/ros2_ws/src/exam_robot/rviz/: exam_robot.rviz
exam1_task7/ros2_ws/src/exam_robot/urdf/: exam_robot.urdf
